# final-project

./: .gitignore  LICENSE  README.md  action.yml  pyproject.toml  requirements.txt
.github/workflows/: release-notes.yml
data/night_wildlife/: build_report.txt  manifest.csv
docs/: METHODOLOGY.md  experiments.md  literature_review.md
docs/demo_results/: config.json  environment.json  history.csv  history.json  metrics.json
release_notes_agent/: __init__.py  categorize.py  cli.py  collector.py  github_client.py  render.py  summarizer.py
results/: README.md
scripts/: build_night_wildlife.py  download_ntlnp.sh  fetch_pretrained_weights.py  fetch_yolo_weights.py  fill_boxes_yolo.py  make_synthetic_data.py  predict.py  prepare_real_dataset.py  run_evaluation.py  run_training.py  validate_dataset.py
src/: __init__.py  config.py  data.py  detect.py  evaluate.py  model.py  split.py  synthetic.py  train.py  utils.py
tests/: test_categorize.py  test_collector.py  test_render.py
